[package]
name = "kitsurai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ktd"
path = "src/server/main.rs"

[[bin]]
name = "ktc"
path = "src/client/main.rs"

[dependencies]
anyhow = { version = "1.0.97", features = ["std", "backtrace"] }
axum = "0.8.1"
local-ip-address = "0.6.3"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["fs", "io-util", "net", "rt-multi-thread", "signal"] }
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rusqlite = "0.34.0"
bytes = { version = "1.10.1", features = ["serde"] }
tokio-util = "0.7.14"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["stream"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7", "v8"] }
log = "0.4.27"
rand = "0.9.0"
env_logger = "0.11.7"
anstyle = "1.0.10"

[profile.release]
lto = true
debug = true
