[package]
name = "kitsurai"
version = "0.1.0"
edition = "2021"
authors = ["Filippo Casarin", "Jacopo Del Granchio"]
description = "A distributed, scalable, and fault-tolerant key-value store."
readme = "README.md"

[[bin]]
name = "ktd"
path = "src/server/main.rs"

[[bin]]
name = "ktc"
path = "src/client/main.rs"

[[bin]]
name = "ktb"
path = "src/bench/main.rs"

[dependencies]
anyhow = { version = "1.0.97", features = ["std", "backtrace"] }
axum = { version = "0.8.1", features = ["default", "http2"] }
local-ip-address = "0.6.3"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["fs", "io-uring", "io-util", "net", "rt-multi-thread", "signal"] }
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
bytes = { version = "1.10.1", features = ["serde"] }
tokio-util = "0.7.14"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["charset", "http2", "macos-system-configuration", "stream"], default-features = false }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7", "v8"] }
log = "0.4.27"
rand = "0.9.0"
env_logger = "0.11.7"
anstyle = "1.0.10"
derive_more = { version = "2.0.1", features = ["from"] }
hex = "0.4.3"
hyper = { version = "1.7.0", features = ["http2", "client", "http1"] }
hyper-util = { version = "0.1.16", features = ["http2", "client", "http1"] }
http = "1.3.1"
http-body-util = "0.1.3"
futures-util = "0.3.31"
libc = "0.2.171"
num_cpus = "1.17.0"

[profile.release]
lto = true
debug = true
